--- a/DiidyChauffer/DiidyChauffer-Info.plist
+++ b/DiidyChauffer/DiidyChauffer-Info.plist
@@ -13,7 +13,7 @@
 		<string>icon.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>www.diidy.com</string>
+	<string>com.diidy.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
